--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,16 +30,18 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
-
-    testCompile 'junit:junit:4.12'
-
-    compile 'com.google.firebase:firebase-core:9.6.1'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-    compile 'com.google.firebase:firebase-storage:9.6.1'
-
     compile 'org.apache.commons:commons-lang3:3.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.0.1'
 
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
+
+    testCompile 'junit:junit:4.12'
 }
 
 // Add to the bottom of the file
